# react-native-bdk-sdk

./: .gitignore  BdkSdk.podspec  CHANGELOG.md  README.md  RELEASE.md  TODO.md  generate.sh  justfile  package.json  pnpm-lock.yaml  tsconfig.json  ubrn.config.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
cpp/: react-native-bdk-sdk.cpp  react-native-bdk-sdk.h
expo-example/: App.tsx  app.json  metro.config.js  package.json  react-native.config.js
ffi/: Cargo.toml  build.rs  uniffi.toml
ffi/src/: bdk.udl  electrum.rs  error.rs  esplora.rs  kyoto.rs  lib.rs  mnemonic.rs  psbt.rs  rpc.rs  tx_builder.rs  types.rs  wallet.rs
ffi/tests/: namespace_functions.rs
ios/: BdkSdk.h  BdkSdk.mm
lib/commonjs/: NativeBdkSdk.js  NativeBdkSdk.js.map  index.js  index.js.map  wrapper.js  wrapper.js.map
lib/module/: NativeBdkSdk.js  NativeBdkSdk.js.map  index.js  index.js.map  wrapper.js  wrapper.js.map
lib/typescript/commonjs/plugin/src/: index.d.ts  withAndroid.d.ts  withIOS.d.ts  withIOS.d.ts.map
lib/typescript/commonjs/src/: index.d.ts  wrapper.d.ts  wrapper.d.ts.map
lib/typescript/module/plugin/src/: index.d.ts.map  withAndroid.d.ts.map
lib/typescript/module/src/: NativeBdkSdk.d.ts  NativeBdkSdk.d.ts.map  index.d.ts  index.d.ts.map  wrapper.d.ts  wrapper.d.ts.map
plugin/: tsconfig.tsbuildinfo
plugin/src/: index.ts  withAndroid.ts  withIOS.ts
scripts/: patch-bindings.sh  postinstall.js
src/: NativeBdkSdk.ts  index.tsx  wrapper.ts
(+2 files in other folders)
