[package]
name = "bdk-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "bdk_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
bdk_wallet = { version = "2.3.0", features = ["all-keys", "keys-bip39", "rusqlite"] }
bdk_esplora = { version = "0.22.1", default-features = false, features = ["std", "blocking", "blocking-https-rustls"] }
bdk_electrum = { version = "0.23.2", default-features = false, features = ["use-rustls-ring"] }
bdk_kyoto = { version = "0.15.4" }
bip39 = { version = "2.2", features = ["all-languages"] }
serde_json = "1.0"

uniffi = { version = "=0.30.0", features = ["cli"] }

[dev-dependencies]
uniffi = { version = "=0.30.0", features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { version = "=0.30.0", features = ["build"] }
